--- a/css/Aled.css
+++ b/css/Aled.css
@@ -2,8 +2,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: #808080;
+  background-color: #e5e5e5;
   margin-right: 1%;
+  box-shadow: black 10px 5px 5px;
+  margin-left: -8px;
+  margin-top: -8px;
 }
 .menu li {
   list-style-type: none;
@@ -57,7 +60,7 @@ li {
   justify-content: start;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: 10px;
+  margin-top: 15px;
   box-shadow: black 0px 0px 10px;
   align-items: start;
   width: 500px;
@@ -85,17 +88,25 @@ li {
   flex-direction: row;
   justify-content: start;
   color: #ff7700;
-  width: 200px;
+  width: 220px;
+  margin-top: 15px;
 }
 .menu-principal .liste-navigation {
   display: flex;
   flex-direction: row;
   line-height: 1px;
   margin-left: -50px;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 .menu-principal .liste-navigation .img-liste {
   margin-left: -29px;
+}
+
+.liste-navigation-2 {
+  display: flex;
+  flex-direction: row;
+  line-height: 1px;
+  margin-left: -40px;
 }
 
 .date {
@@ -105,10 +116,30 @@ li {
 
 #article3, #article5, #article6 {
   width: 300px;
+  transform: rotate(2deg);
+}
+
+#article1, #article3, #article5, #article7, #article9 {
+  transform: rotate(2deg);
+}
+
+#article2, #article4, #article6, #article8, #article10 {
+  transform: rotate(-2deg);
 }
 
 .img-article {
   width: 100%;
+}
+
+.bouton {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
+
+#btn-article {
+  border-radius: 10px;
+  border-color: black;
 }
 
 @media only screen and (max-width: 1233px) and (min-width: 1041px) {
@@ -143,6 +174,11 @@ li {
   }
   #article3, #article5, #article6 {
     width: 270px;
+  }
+  .bouton {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
   }
 }
 
