--- a/scss/Aled.scss
+++ b/scss/Aled.scss
@@ -3,8 +3,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: #808080;
+  background-color: #e5e5e5;
   margin-right: 1%;
+  box-shadow: black 10px 5px 5px;
+  margin-left: -8px;
+  margin-top: -8px;
 
   li {
     list-style-type: none;
@@ -15,7 +18,6 @@
 .menu-1 {
   display: flex;
   flex-direction: row;
-
   justify-content: flex-start;
   margin-left: 10px;
   margin-right: 10px;
@@ -62,7 +64,7 @@ li {
   justify-content: start;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: 10px;
+  margin-top: 15px;
   box-shadow: black 0px 0px 10px;
   align-items: start;
   width: 500px;
@@ -81,6 +83,7 @@ li {
   font-weight: bold;
   margin-bottom: 10px;
 
+
 }
 
 .text-article {
@@ -92,19 +95,27 @@ li {
   flex-direction: row;
   justify-content: start;
   color: #ff7700;
-  width: 200px;
+  width: 220px;
+  margin-top: 15px;
 
   .liste-navigation {
     display: flex;
     flex-direction: row;
     line-height: 1px;
     margin-left: -50px;
-    margin-top: 10px;
+    margin-top: 5px;
 
     .img-liste {
       margin-left: -29px;
     }
   }
+}
+
+.liste-navigation-2 {
+  display: flex;
+  flex-direction: row;
+  line-height: 1px;
+  margin-left: -40px;
 }
 
 .date {
@@ -115,11 +126,34 @@ li {
 
 #article3, #article5, #article6 {
   width: 300px;
+  transform: rotate(2deg);
 
 }
 
+#article1, #article3, #article5, #article7, #article9 {
+  transform: rotate(2deg);
+
+}
+
+#article2, #article4, #article6, #article8, #article10, {
+  transform: rotate(-2deg);
+}
+
+
 .img-article {
   width: 100%;
+}
+
+.bouton {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+
+}
+
+#btn-article {
+  border-radius: 10px;
+  border-color: black;
 }
 
 @media only screen and (max-width: 1233px) and (min-width: 1041px) {
@@ -161,12 +195,19 @@ li {
 
 @media only screen and (max-width: 606px) {
 
-.article{
-  width:600px;
-  height : 600px;
-}
+  .article {
+    width: 600px;
+    height: 600px;
+  }
   #article3, #article5, #article6 {
     width: 270px;
+
+  }
+
+  .bouton {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
 
   }
 
