--- a/scss/Aled.scss
+++ b/scss/Aled.scss
@@ -172,6 +172,7 @@ li {
 @media only screen and (max-width: 1040px) and (min-width: 853px) {
   .article {
     width: 370px;
+    height: 600px ;
   }
   #article3, #article5, #article6 {
     width: 190px;
