--- a/css/Aled.css
+++ b/css/Aled.css
@@ -153,6 +153,7 @@ li {
 @media only screen and (max-width: 1040px) and (min-width: 853px) {
   .article {
     width: 370px;
+    height: 600px;
   }
   #article3, #article5, #article6 {
     width: 190px;
