--- a/css/Aled.css
+++ b/css/Aled.css
@@ -83,6 +83,21 @@ li {
   text-align: justify;
 }
 
+.logo-text {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  flex-wrap: nowrap;
+}
+.logo-text img {
+  width: 16px;
+  height: 16px;
+  margin-top: 5px;
+}
+.logo-text .date {
+  margin-top: 5px;
+}
+
 .menu-principal {
   display: flex;
   flex-direction: row;
